--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="file:///Users/ppilotti/Google%20Drive/Web%20Development/HTML%20Personal%20Site/Photos/59716390803__6E9BCCC3-3814-4E06-AD2D-043B914DE2FC.fullsizerender.jpg" style="width:150px" ></td>
+        <td><img src="../Photos/59716390803__6E9BCCC3-3814-4E06-AD2D-043B914DE2FC.fullsizerender.jpg" style="width:150px" ></td>
         <td><h1>Peter Pilotti</h1>
         <p><em>Eloqua marketing automation consultant at <b>Kaiser Permenente</b></em></p>
         <p>something about me</p>
