--- a/index.html
+++ b/index.html
@@ -1,103 +1,123 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Peter's Personl Site</title>
-  </head>
-  <body>
-    <table cellspacing="20">
-      <tr>
-        <td><img src="Photos/59716390803__6E9BCCC3-3814-4E06-AD2D-043B914DE2FC.fullsizerender.jpg" style="width:150px" ></td>
-        <td><h1>Peter Pilotti</h1>
+
+<head>
+  <meta charset="utf-8">
+  <title>Peter's Personl Site</title>
+</head>
+
+<body>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="Photos/59716390803__6E9BCCC3-3814-4E06-AD2D-043B914DE2FC.fullsizerender.jpg" style="width:150px"></td>
+      <td>
+        <h1>Peter Pilotti</h1>
         <p><em>Eloqua marketing automation consultant at <b>Kaiser Permenente</b></em></p>
         <p>something about me</p>
         <p>something about me</p>
       </td>
-      </tr>
-    </table>
+    </tr>
+  </table>
 
 
 
-    <hr>
-    <h3>Education</h3>
-    <p>Washington State University, Batchlors of Arts; Digital Technology and Culture</p>
+  <hr>
+  <h3>Education</h3>
+  <p>Washington State University, Batchlors of Arts; Digital Technology and Culture</p>
 
 
-<hr />
+  <hr />
 
 
 
-    <h3>Work Experience</h3>
-    <table cellspacing="10">
-<tr>
-  <td><strong>Date</strong></td><td><strong>Position</strong></td>
-</tr>
-<tr>
-  <td valign="top">2016 - Current</td><td><strong>Kaiser Permenente</strong>, Oakland California<br /><em>Email Automation Production Consultant</em></td>
-</tr>
-<tr>
-  <td valign="top">2007 - 2016</td><td><strong>John Wiley & Sons</strong>, San Francisco California<br /><em>Email Automation Specialist</em></td>
-</tr>
-<tr>
-  <td valign="top">2006 - 2007</td><td><strong>Morrison O'Heara</strong>, Berkeley California<br /><em>Engraver</em></td>
-</tr>
-<tr>
-  <td valign="top">2005 - 2006</td><td><strong>Awards & more</strong>, Longview Washington<br /><em>Engraver</em></td>
-</tr>
-<tr>
-  <td valign="top">2004 - 2005</td><td><strong>Cursious Monkey</strong>, Taipei Taiwan<br /><em>English Teacher</em></td>
-</tr>
-<tr>
-  <td valign="top">2003 - 2004</td><td><strong>Wells Fargo</strong>, Hillsboro Oregon<br /><em>Mortgage Loan Procesor</em></td>
-</tr>
+  <h3>Work Experience</h3>
+  <table cellspacing="10">
+    <tr>
+      <td><strong>Date</strong></td>
+      <td><strong>Position</strong></td>
+    </tr>
+    <tr>
+      <td valign="top">2016 - Current</td>
+      <td><strong>Kaiser Permenente</strong>, Oakland California<br /><em>Email Automation Production Consultant</em></td>
+    </tr>
+    <tr>
+      <td valign="top">2007 - 2016</td>
+      <td><strong>John Wiley & Sons</strong>, San Francisco California<br /><em>Email Automation Specialist</em></td>
+    </tr>
+    <tr>
+      <td valign="top">2006 - 2007</td>
+      <td><strong>Morrison O'Heara</strong>, Berkeley California<br /><em>Engraver</em></td>
+    </tr>
+    <tr>
+      <td valign="top">2005 - 2006</td>
+      <td><strong>Awards & more</strong>, Longview Washington<br /><em>Engraver</em></td>
+    </tr>
+    <tr>
+      <td valign="top">2004 - 2005</td>
+      <td><strong>Cursious Monkey</strong>, Taipei Taiwan<br /><em>English Teacher</em></td>
+    </tr>
+    <tr>
+      <td valign="top">2003 - 2004</td>
+      <td><strong>Wells Fargo</strong>, Hillsboro Oregon<br /><em>Mortgage Loan Procesor</em></td>
+    </tr>
 
-    </table>
-<hr />
+  </table>
+  <hr />
 
-     <h3>Skills</h3>
- <table cellspacing="10">
-   <tr>
-     <td>
-       <table cellspacing="10">
-         <tr>
-           <td>Web Developement</td><td>⭐️⭐️⭐️⭐️⭐️</td>
-         </tr>
-         <tr>
-           <td>Marketing Automation</td><td>⭐️⭐️⭐️⭐️⭐️</td>
-         </tr>
-         <tr>
-           <td>Oracle Eloqua</td><td>⭐️⭐️⭐️⭐️⭐️</td>
-         </tr>
-         <tr>
-           <td>Litmus Testing Platform</td><td>⭐️⭐️⭐️⭐️⭐️</td>
-         </tr>
-         <tr>
-           <td>Wrike Project Management</td><td>⭐️⭐️⭐️⭐️</td>
-         </tr>
-       </table>
-     </td>
-     <td>
-       <table cellspacing="10">
-         <tr>
-           <td>HTML & CSS for email</td><td>⭐️⭐️⭐️⭐️⭐️</td>
-         </tr>
-         <tr>
-           <td>Eloqua: Advanced Dynamic Content</td><td>⭐️⭐️⭐️⭐️⭐️</td>
-         </tr>
-         <tr>
-           <td>Eloqua: Canvas & Segment Logic</td><td>⭐️⭐️⭐️⭐️⭐️</td>
-         </tr>
-         <tr>
-           <td>Eloqua: Landing Pages & Forms</td><td>⭐️⭐️⭐️</td>
-         </tr>
+  <h3>Skills</h3>
+  <table cellspacing="10">
+    <tr>
+      <td>
+        <table cellspacing="10">
+          <tr>
+            <td>Web Developement</td>
+            <td>⭐️⭐️⭐️⭐️⭐️</td>
+          </tr>
+          <tr>
+            <td>Marketing Automation</td>
+            <td>⭐️⭐️⭐️⭐️⭐️</td>
+          </tr>
+          <tr>
+            <td>Oracle Eloqua</td>
+            <td>⭐️⭐️⭐️⭐️⭐️</td>
+          </tr>
+          <tr>
+            <td>Litmus Testing Platform</td>
+            <td>⭐️⭐️⭐️⭐️⭐️</td>
+          </tr>
+          <tr>
+            <td>Wrike Project Management</td>
+            <td>⭐️⭐️⭐️⭐️</td>
+          </tr>
+        </table>
+      </td>
+      <td>
+        <table cellspacing="10">
+          <tr>
+            <td>HTML & CSS for email</td>
+            <td>⭐️⭐️⭐️⭐️⭐️</td>
+          </tr>
+          <tr>
+            <td>Eloqua: Advanced Dynamic Content</td>
+            <td>⭐️⭐️⭐️⭐️⭐️</td>
+          </tr>
+          <tr>
+            <td>Eloqua: Canvas & Segment Logic</td>
+            <td>⭐️⭐️⭐️⭐️⭐️</td>
+          </tr>
+          <tr>
+            <td>Eloqua: Landing Pages & Forms</td>
+            <td>⭐️⭐️⭐️</td>
+          </tr>
 
-       </table>
-     </td>
-   </tr>
- </table>
-<hr />
-<a href="hobbies.html">Hobbies</a>
-<a href="contactme.html">Contact Me</a>
+        </table>
+      </td>
+    </tr>
+  </table>
+  <hr />
+  <a href="hobbies.html">Hobbies</a>
+  <a href="contactme.html">Contact Me</a>
 
-  </body>
+</body>
+
 </html>
